[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://menu/background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 672.0
margin_bottom = 724.0
rect_scale = Vector2( 0.475771, 0.247714 )
texture = ExtResource( 3 )

[node name="StartButton" type="Button" parent="."]
margin_left = 26.0
margin_top = 56.0
margin_right = 144.0
margin_bottom = 75.0
focus_neighbour_top = NodePath("../ExitButton")
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="OptionsButton" type="Button" parent="."]
margin_left = 204.0
margin_top = 81.0
margin_right = 254.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="ExitButton" type="Button" parent="."]
margin_left = 183.0
margin_top = 142.0
margin_right = 223.0
margin_bottom = 161.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 3 )
text = "Exit"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
